changes done in image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 
-  <img src="images/lubna.png-modified.png" width="200" height="200" alt="profile picture">
+  <img src="lubna.png-modified.png" width="200" height="200" alt="profile picture">
   <h1>Lubna Hilal</h1>
   <p><em>student in university of kashmir  <strong>pursuing B Tech</strong></em></p>
   <p>i am learning web development and i ❤️ to code </p><hr />
